Fix spacing in dataset view page

--- a/modules/ytp-assets-common/resources/styles/main.css
+++ b/modules/ytp-assets-common/resources/styles/main.css
@@ -4412,9 +4412,9 @@ article.module {
 }
 ul.resource-list {
   background: #e8e7e6;
-  padding: 4px 2px 4px 15px;
+  padding: 6px 2px 4px 6px;
   border-radius: 10px;
-  margin: 5px 5px 20px 5px;
+  margin: 5px 5px 20px 0px;
 }
 .resource-item {
   overflow: hidden;
@@ -5260,7 +5260,7 @@ a:focus {
 }
 
 body {
-  background: url("../images/stamen_background.jpg?timestamp=1408106687065") 50% 50% fixed no-repeat;
+  background: url("../images/stamen_background.jpg?timestamp=1408108579048") 50% 50% fixed no-repeat;
   background-size: cover;
   padding-top: 54px;
   padding-bottom: 32px;
@@ -5288,7 +5288,7 @@ h4 {
   display: block;
   width: 21px;
   height: 25px;
-  background-image: url('../images/sprite.png?timestamp=1408106687065');
+  background-image: url('../images/sprite.png?timestamp=1408108579048');
   background-repeat: no-repeat;
   background-position: -56px -24px;
   float: left;
@@ -5298,7 +5298,7 @@ h4 {
   float: left;
   width: 21px;
   height: 24px;
-  background-image: url('../images/sprite.png?timestamp=1408106687065');
+  background-image: url('../images/sprite.png?timestamp=1408108579048');
   background-repeat: no-repeat;
   background-position: -56px 0px;
   margin-right: 8px;
@@ -5547,7 +5547,7 @@ label.checkbox-inline:after {
 }
 .btn-default.btn-lg {
   color: #ffffff;
-  background: url("../images/button-lg-gradient.png?timestamp=1408106687065") repeat-x;
+  background: url("../images/button-lg-gradient.png?timestamp=1408108579048") repeat-x;
   height: 63px;
 }
 .add-member-or {
@@ -5984,7 +5984,7 @@ li.ytp-menulink.active > a.active {
 .well.infowell .infowell-icon {
   width: 46px;
   height: 76px;
-  background-image: url('../images/sprite.png?timestamp=1408106687065');
+  background-image: url('../images/sprite.png?timestamp=1408108579048');
   background-repeat: no-repeat;
 }
 .well.infowell.infowell-dark {
