--- a/modules/ytp-assets-common/src/less/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan.less
@@ -191,9 +191,9 @@ article.module {
 
 ul.resource-list {
   background: @background-hilight;
-  padding: 4px 2px 4px 15px;
+  padding: 6px 2px 4px 6px;
   border-radius: 10px;
-  margin: 5px 5px 20px 5px;
+  margin: 5px 5px 20px 0px;
 }
 
 .resource-item {
